--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="toolbar">
             <div class="toolbar-brand">
-                <h1>Live Shader Editor</h1>
+                <h1>Live GLSL Shader Editor</h1>
             </div>
             
             <div class="toolbar-sections">
