--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live GLSL Shader Editor</title>
     <link rel="stylesheet" href="src/styles/main.css">
+
+    <!-- Primary Meta Tags -->
+    <title>Shader Editor</title>
+    <meta name="title" content="Shader Editor - Create and experiment with GLSL shaders!" />
+    <meta name="description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://periapsises.github.io/shader-editor/" />
+    <meta property="og:title" content="Shader Editor - Create and experiment with GLSL shaders!" />
+    <meta property="og:description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
+    <meta property="og:image" content="site-image.png" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://periapsises.github.io/shader-editor/" />
+    <meta property="twitter:title" content="Shader Editor - Create and experiment with GLSL shaders!" />
+    <meta property="twitter:description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
+    <meta property="twitter:image" content="site-image.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     <div class="container">
