Use full image link

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://periapsises.github.io/shader-editor/" />
     <meta property="og:title" content="Shader Editor - Create and experiment with GLSL shaders!" />
     <meta property="og:description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
-    <meta property="og:image" content="site-image.png" />
+    <meta property="og:image" content="https://periapsises.github.io/shader-editor/site-image.png" />
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://periapsises.github.io/shader-editor/" />
     <meta property="twitter:title" content="Shader Editor - Create and experiment with GLSL shaders!" />
     <meta property="twitter:description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
-    <meta property="twitter:image" content="site-image.png" />
+    <meta property="twitter:image" content="https://periapsises.github.io/shader-editor/site-image.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
