Add texture filtering setting

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                             <input type="checkbox" id="panZoomToggle">
                             <span class="checkbox-label">Pan/Zoom</span>
                         </label>
+                        <div class="toolbar-dropdown">
+                            <select id="canvasFilterSelect" class="toolbar-select" title="Canvas filtering mode">
+                                <option value="nearest" selected>Pixelated</option>
+                                <option value="linear">Smooth</option>
+                            </select>
+                        </div>
                         <button id="resetViewBtn" class="toolbar-btn" title="Reset view to default">
                             <span class="btn-icon">🎯</span>
                             <span class="btn-text">Reset View</span>
