Add FPS counter

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                             <span class="btn-icon">🎯</span>
                             <span class="btn-text">Reset View</span>
                         </button>
+                        <div class="fps-counter" id="fpsCounter" title="Frames per second">
+                            <span class="fps-label">FPS:</span>
+                            <span class="fps-value" id="fpsValue">--</span>
+                        </div>
                     </div>
                 </div>
                 
