Cleanup uniforms styling

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
             </div>
             
             <!-- Collapsible Settings Panel Overlay -->
-            <div class="uniform-overlay collapsed" id="uniformOverlay">
+            <div class="settings-overlay collapsed" id="settingsOverlay">
                 <div class="overlay-sidebar">
-                    <button class="uniform-toggle" id="uniformToggle" title="Toggle Settings Panel">
+                    <button class="settings-toggle" id="settingsToggle" title="Toggle Settings Panel">
                         <span class="toggle-icon">◀</span>
                     </button>
                     
