Use custom icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Shader Editor</title>
     <meta name="title" content="Shader Editor - Create and experiment with GLSL shaders!" />
     <meta name="description" content="A web-based live GLSL shader editor with powerful tooling for anyone wanting to experiment and develop shaders." />
+    <link rel="icon" href="favicon.ico" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
