Add project dialogs

--- a/index.html
+++ b/index.html
@@ -152,6 +152,24 @@
                                 <span class="menu-text">Browse Projects</span>
                             </button>
                         </div>
+                        <div class="menu-section">
+                            <h4>Autosave</h4>
+                            <div class="menu-control">
+                                <label class="menu-checkbox">
+                                    <input type="checkbox" id="autosaveToggle" checked>
+                                    <span>Enable Autosave</span>
+                                </label>
+                                <div class="menu-control">
+                                    <label>Interval:</label>
+                                    <select id="autosaveInterval" class="menu-select" title="Autosave interval">
+                                        <option value="0.5">30s</option>
+                                        <option value="1">1m</option>
+                                        <option value="2" selected>2m</option>
+                                        <option value="5">5m</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
